--- a/styles/layout.css
+++ b/styles/layout.css
@@ -65,6 +65,11 @@ main {
   margin: 0 calc(var(--indent) * 3);
 }
 
+.article-ls .replace-bullet {
+  margin-left: -2ch;
+  margin-right: 1ch;
+}
+
 .article-par:nth-child(2) {
   margin-top: 16px;
 }
